# gpgnet4ta

./: .gitignore  .gitmodules  CMakeLists.txt  ConsoleReader.cpp  ConsoleReader.h  Dockerfile  GameEventHandlerQt.cpp  GameEventHandlerQt.h  GameMonitor2.cpp  GameMonitor2.h  GpgNetGameLauncher.cpp  GpgNetGameLauncher.h  GpgNetRunner.cpp  GpgNetRunner.h  IrcForward.cpp  IrcForward.h  IrcForwardMock.cpp  IrcForwardMock.h  LICENSE  LaunchClient.cpp  LaunchClient.h  LaunchServer.cpp  LaunchServer.h  Logger.cpp  Logger.h  MessageBoxThread.cpp  MessageBoxThread.h  TaDemoCompiler.cpp  TaDemoCompilerClient.cpp  TaDemoCompilerClient.h  TaDemoCompilerMessages.cpp  TaDemoCompilerMessages.h  TaLauncher.cpp  TaLobby.cpp  TaLobby.h  TaReplayClient.cpp  TaReplayClient.h  TaReplayServer.cpp  TaReplayServer.h  TaReplayServerMessages.cpp  (+15 more)
.github/workflows/: build.yml
apps/gpgnet4ta/: CMakeLists.txt  GameEventHandlerQt.cpp  GameMonitor2.cpp  GameMonitor2.h  GpgNetGameLauncher.cpp  GpgNetGameLauncher.h  IrcForward.cpp  TaLobby.cpp  TaLobby.h  gpgnet4ta.cpp
apps/replayer/: CMakeLists.txt  TaReplayer.cpp  TaReplayer.h  replayer.cpp
apps/replayserver/: CMakeLists.txt  ReplayServer.cpp  TafHwIdGenerator.cpp  TafHwIdGenerator.h  TafLobbyClient.cpp  TafLobbyClient.h  TafLobbyJsonProtocol.cpp  TafLobbyJsonProtocol.h  replayserver.cpp
apps/talauncher/: CMakeLists.txt  TaLauncher.cpp  talauncher.cpp
apps/testapp/: CMakeLists.txt  testapp.cpp
gpgnet/: CMakeLists.txt  GpgNetClient.cpp  GpgNetClient.h  GpgNetParse.cpp  GpgNetParse.h  GpgNetReceive.cpp  GpgNetReceive.h  GpgNetSend.cpp  GpgNetSend.h  GpgNetServerMessages.cpp
jdplay/: CMakeLists.txt  DPlayWrapper.cpp  DPlayWrapper.h  JDPlay.cpp  JDPlay.h
libs/gpgnet/: CMakeLists.txt  GpgNetClient.cpp  GpgNetClient.h  GpgNetParse.cpp  GpgNetSend.cpp  GpgNetSend.h  GpgNetServerMessages.cpp  GpgNetServerMessages.h
libs/jdplay/: DPlayWrapper.cpp  DPlayWrapper.h  JDPlay.cpp  JDPlay.h
libs/taflib/: CMakeLists.txt  ConsoleReader.cpp  ConsoleReader.h  DuplicateDetection.cpp  DuplicateDetection.h  EngineeringNotation.cpp  EngineeringNotation.h  Logger.cpp  Logger.h  MessageBoxThread.cpp  MessageBoxThread.h  Watchdog.cpp  Watchdog.h
libs/tafnet/: CMakeLists.txt  GameAddressTranslater.cpp  GameAddressTranslater.h  GameReceiver.cpp  GameSender.cpp  TafnetGameNode.cpp  TafnetGameNode.h  TafnetNode.cpp  TafnetNode.h
libs/talaunch/: CMakeLists.txt  LaunchClient.cpp  LaunchClient.h  LaunchServer.cpp  LaunchServer.h
libs/tapacket/: CMakeLists.txt  DPlayPacket.cpp  DPlayPacket.h  TADemoParser.cpp  TADemoParser.h  TADemoRecords.h  TADemoWriter.cpp  TADemoWriter.h  TAPacketParser.cpp  TAPacketParser.h  TPacket.cpp  TPacket.h  TestPackets.cpp  TestPackets.h  UnitDataRepo.cpp  UnitDataRepo.h  tadissector.lua  tasmartpak.lua
libs/tapacket/notes/: subpacket types reading from TA socket.txt
libs/tareplay/: CMakeLists.txt  TaDemoCompiler.cpp  TaDemoCompiler.h  TaDemoCompilerClient.cpp  TaDemoCompilerClient.h  TaDemoCompilerMessages.cpp  TaDemoCompilerMessages.h  TaReplayClient.cpp  TaReplayClient.h  TaReplayServer.cpp  TaReplayServer.h  TaReplayServerMessages.cpp  TaReplayServerMessages.h
tademo/: CMakeLists.txt  DPlayPacket.cpp  DPlayPacket.h  DuplicateDetection.cpp  DuplicateDetection.h  GameMonitor.cpp  GameMonitor.h  HexDump.cpp  HexDump.h  TADemoParser.cpp  TADemoParser.h  TADemoRecords.h  TADemoWriter.cpp  TADemoWriter.h  TAPacketParser.cpp  TAPacketParser.h  TPacket.cpp  TPacket.h  TestPackets.cpp  TestPackets.h  Watchdog.cpp  Watchdog.h  nswfl_crc32.cpp  nswfl_crc32.h  tadissector.lua
tademo/notes/: dplay dwuser status bits.txt  statuspackets.txt
tafnet/: CMakeLists.txt  GameAddressTranslater.cpp  GameAddressTranslater.h  GameReceiver.cpp  GameReceiver.h  GameSender.cpp  GameSender.h  GetUpnpPortMap.cpp  GetUpnpPortMap.h  TafnetGameNode.cpp  TafnetGameNode.h  TafnetNode.cpp  TafnetNode.h
